<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="57dp"
    android:background="#F0F0F0">

    <LinearLayout
        android:id="@+id/linearLayout_chat"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ib_tab_chat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#F0F0F0"
            android:scaleType="fitXY"
            android:clickable="false"
            android:src="@drawable/ic_chat_bubble_outline_black_24dp" >
            </ImageButton>

        <TextView
            android:id="@+id/tvChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_address"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_tab_address"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#F0F0F0"
            android:clickable="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_group_black_24dp"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_share"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ib_tab_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="false"
            android:background="#F0F0F0"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chrome_reader_mode_black_24dp" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_my"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ib_tab_my"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#F0F0F0"
            android:clickable="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_menu_black_24dp" />

        <TextView
            android:id="@+id/tvMy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my"
            android:textColor="#000" />
    </LinearLayout>
</LinearLayout>