<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/TitleBarBgColor"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/back"
                android:textColor="@color/TitleBarTextColor"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/information"
                android:textColor="@color/TitleBarTextColor"
                android:textSize="20dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:background="@color/SpaceBgColor"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            ></LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivHead"
                android:background="@color/headBackground"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_person_black_24dp"
                />

            <TextView
                android:id="@+id/tvUserName"
                android:text="咸鱼宝宝"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:background="@color/SpaceBgColor"
            android:layout_width="match_parent"
            android:layout_height="20dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="18024163888"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/Line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"></LinearLayout>

        <LinearLayout
            android:id="@+id/layout_self"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/slogan"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="珊在蚊在"
                android:textSize="16dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/Line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"></LinearLayout>

        <LinearLayout
            android:id="@+id/layout_article"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvArticle"
                android:text="@string/hePost"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/SpaceBgColor"
            android:layout_width="match_parent"
            android:layout_height="30dp"></LinearLayout>


</LinearLayout>
</LinearLayout>