<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/TitleBarBgColor"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/my"
            android:textColor="@color/TitleBarTextColor"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/SpaceBgColor"
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivHead"
            android:src="@mipmap/ic_person_black_24dp"
            android:scaleType="fitXY"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
             />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="用户名"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:background="#272727"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"></LinearLayout>


    <LinearLayout
        android:background="@color/SpaceBgColor"
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <LinearLayout
        android:id="@+id/layout_myInformation"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/myInformation"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:background="#272727"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"></LinearLayout>

    <LinearLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/setUp"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/SpaceBgColor"
        android:layout_width="match_parent"
        android:layout_height="20dp"></LinearLayout>


    <LinearLayout
        android:id="@+id/layout_quit"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/quitToApp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:background="#272727"
        android:layout_width="match_parent"
        android:layout_height="1px"></LinearLayout>


    <LinearLayout
        android:background="@color/SpaceBgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

</LinearLayout>