<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DrawerLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/TitleBarBgColor"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/community"
                    android:textColor="@color/TitleBarTextColor"
                    android:textSize="20dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bt_share"
                >

                <LinearLayout
                    android:id="@+id/layout_all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:textColor="@color/TitleBarBgColor"
                        android:textSize="20dp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_friend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvFriend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friend"
                        android:textColor="@color/shareButtonText"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/TabLayout"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/TitleBarBgColor"
                app:tabIndicatorColor="@color/TitleBarBgColor"
                app:tabTextAppearance="@style/TabLayoutTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"></android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/ViewPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v4.view.ViewPager>

        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:background="@drawable/blue"
        app:itemTextColor="@color/nav_header_TextColor"
        app:itemIconTint="#fff"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.v4.widget.DrawerLayout>